# rand_derangement

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: sampling.rs
examples/: golomb_dickman.rs
src/: lib.rs  main.rs
