[package]
name = "rand_derangement"
version = "0.1.0"
edition = "2024"
description = "Fast, uniformly random sampling of derangements (permutations with no fixed points)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonas-lj/rand_derangement"
keywords = ["derangement", "permutation", "random", "sampling", "combinatorics"]
categories = ["algorithms", "mathematics"]

[dependencies]
rand = "0.10.2"

[[bench]]
name = "sampling"
harness = false

[dev-dependencies]
criterion = "0.8.2"
